Disallow programs to rename windows’ names.

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,6 +1,7 @@
 set -sg escape-time 0
 set-option -g prefix C-a
 set-option -sa terminal-overrides ",xterm*:Tc"
+set -g allow-rename off
 
 # key bindings
 # bind-key -T copy-mode t send-keys -X page-down
@@ -52,7 +53,7 @@ set -g status-position bottom
 set -g status-bg colour234
 set -g status-fg colour137
 set -g status-attr dim
-set -g status-left '#[fg=colour78,bg=colour241,bold]#S '
+set -g status-left '#[fg=colour78,bg=colour235,bold]#S '
 set -g status-right '#[fg=colour131,bg=colour239,bold]#H #[fg=colour233,bg=colour241,bold] %d/%m #[fg=colour233,bg=colour245,bold] %H:%M:%S'
 set -g status-right-length 50
 set -g status-left-length 20
