--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,21 +1,27 @@
 set -sg escape-time 0
 set-option -g prefix C-a
-set-option -sa terminal-overrides ",xterm*:Tc"
+#set-option -ga terminal-overrides ",xterm*:Tc"
+set -g default-terminal "xterm-256color-italic"
+set-option -ga terminal-overrides ",xterm-256color-italic*:Tc"
 set -g allow-rename off
 
 # key bindings
-# bind-key -T copy-mode t send-keys -X page-down
-# bind-key -T copy-mode s send-keys -X page-up
-
-bind-key -T prefix Space new-window
-bind-key -T prefix c select-pane -L
-bind-key -T prefix t select-pane -D
-bind-key -T prefix s select-pane -U
-bind-key -T prefix r select-pane -R
+set-window-option -g mode-keys vi
+bind-key    -T prefix Space new-window
+bind-key    -T prefix c select-pane -L
+bind-key    -T prefix t select-pane -D
+bind-key    -T prefix s select-pane -U
+bind-key    -T prefix r select-pane -R
+bind-key    -T prefix o split-window
+bind-key    -T prefix v split-window -h
 bind-key -r -T prefix M-s resize-pane -U 5
 bind-key -r -T prefix M-t resize-pane -D 5
 bind-key -r -T prefix M-c resize-pane -L 5
 bind-key -r -T prefix M-r resize-pane -R 5
+bind-key    -T copy-mode-vi c send-keys -X cursor-left
+bind-key    -T copy-mode-vi t send-keys -X cursor-down
+bind-key    -T copy-mode-vi s send-keys -X cursor-up
+bind-key    -T copy-mode-vi r send-keys -X cursor-right
 
 # design tweaking
 
@@ -53,7 +59,7 @@ set -g status-position bottom
 set -g status-bg colour235
 set -g status-fg colour137
 set -g status-attr dim
-set -g status-left '#[fg=colour78,bg=colour235,bold]#S '
+set -g status-left '#[fg=colour78,bg=colour238,bold]#S '
 set -g status-right '#[fg=colour131,bg=colour239,bold]#H #[fg=colour233,bg=colour241,bold] %d/%m #[fg=colour233,bg=colour245,bold] %H:%M:%S'
 set -g status-right-length 50
 set -g status-left-length 20
