--- a/archlinux/i3blocks.conf
+++ b/archlinux/i3blocks.conf
@@ -41,25 +41,16 @@ instance=wlp5s0;out
 label=
 interval=1
 
-[battery]
-label=
-instance=0
-interval=5
-
 # Part 2
 
 #[bluetooth]
 #label=
 #interval=10
 
-[brightness]
-label=
-interval=5
-
 #[countdown]
 #instance=tomorrow 05:00:00
 #label=
-interval=1
+#interval=1
 
 # Part 3
 
@@ -101,9 +92,9 @@ interval=2
 #label=
 #interval=once
 
-[load]
-label=
-interval=2
+#[load]
+#label=
+#interval=2
 
 # Part 6
 
@@ -119,7 +110,7 @@ interval=2
 [memory]
 label=
 instance=mem;free
-interval=30
+interval=5
 
 [memory]
 label=
@@ -132,19 +123,9 @@ interval=30
 #label=
 #interval=5
 
-[network]
-label=
-instance=enp4s0f2
-interval=10
-
-[network]
-label=
-instance=wlp5s0
-interval=10
-
-[packages]
-label=
-interval=300
+#[packages]
+#label=
+#interval=300
 
 # Part 8
 
@@ -169,6 +150,16 @@ interval=30
 
 # Part 9
 
+[network]
+label=
+instance=enp4s0f2
+interval=10
+
+[network]
+label=
+instance=wlp5s0
+interval=10
+
 [ssid]
 label=
 interval=60
@@ -176,27 +167,27 @@ interval=60
 [temperature]
 instance=Core
 label=
-interval=5
+interval=20
 
 # Part 10
 
-[vpn]
-label=
-interval=5
+#[vpn]
+#label=
+#interval=5
 
-[weather]
-instance=2988507
-interval=60
+#[weather]
+#instance=2988507
+#interval=60
 
-[webcam]
-label=
-interval=5
+#[webcam]
+#label=
+#interval=5
 
 # Part 11
-[usb]
-instance=PhotoSmart
-label=
-interval=10
+#[usb]
+#instance=PhotoSmart
+#label=
+#interval=10
 
 #[cmus]
 #command=~/.i3-blocks/blocks/scroll $BLOCK_NAME
@@ -206,15 +197,24 @@ interval=10
 
 # Part 12
 
-[window]
-command=~/.i3-blocks/blocks/scroll $BLOCK_NAME
-label=
-markup=pango
-interval=repeat
+#[window]
+#command=~/.i3-blocks/blocks/scroll $BLOCK_NAME
+#label=
+#markup=pango
+#interval=repeat
+
+[brightness]
+label=
+interval=5
 
 [audio]
 label=
 interval=1
+
+[battery]
+label=
+instance=0
+interval=20
 
 [datetime]
 label=
