--- a/archlinux/.tmux.conf
+++ b/archlinux/.tmux.conf
@@ -27,15 +27,21 @@ bind-key    -T copy-mode-vi r send-keys -X cursor-right
 
 # panes
 set -g pane-active-border-fg brightmagenta
+set -g pane-active-border-bg colour236
 set -g pane-border-bg colour235
 set -g pane-border-fg colour238
-set -g pane-active-border-bg colour236
 
 # status line
-set -g status-justify left
+set -g status-justify centre
+set -g status-fg colour137
 set -g status-bg default
-set -g status-fg colour12
+set -g status-attr bright
 set -g status-interval 1
+set -g status-position bottom
+set -g status-left '#[fg=colour202,bold]#S '
+set -g status-left-length 50
+set -g status-right '#[fg=colour205,bold]#H #[fg=colour206,bold] %H:%M:%S'
+set -g status-right-length 50
 
 # messaging
 set -g message-bg yellow
@@ -44,35 +50,17 @@ set -g message-command-bg black
 set -g message-command-fg blue
 
 # window mode
-setw -g mode-bg colour6
-setw -g mode-fg colour0
+setw -g mode-bg colour204
+setw -g mode-fg black
 
 # window status
-setw -g window-status-current-bg colour0
-setw -g window-status-current-fg colour11
-setw -g window-status-current-attr dim
-setw -g window-status-bg green
-setw -g window-status-fg black
-setw -g window-status-attr reverse
+setw -g window-status-current-fg colour203
+setw -g window-status-current-attr bright
+setw -g window-status-current-format '#I#[fg=colour250]:#[fg=colour204]#W#[fg=colour205]#F'
 
-set -g status-position bottom
-set -g status-bg colour235
-set -g status-fg colour137
-set -g status-attr dim
-set -g status-left '#[fg=colour78,bg=colour238,bold]#S '
-set -g status-right '#[fg=colour131,bg=colour239,bold]#H #[fg=colour233,bg=colour241,bold] %d/%m #[fg=colour233,bg=colour245,bold] %H:%M:%S'
-set -g status-right-length 50
-set -g status-left-length 20
-
-setw -g window-status-current-fg colour81
-setw -g window-status-current-bg colour238
-setw -g window-status-current-attr bold
-setw -g window-status-current-format '#I#[fg=colour250]:#[fg=colour255]#W#[fg=colour50]#F'
-
-setw -g window-status-fg colour138
-setw -g window-status-bg colour235
-setw -g window-status-attr none
-setw -g window-status-format '#I#[fg=colour237]:#[fg=colour250]#W#[fg=colour244]#F'
+setw -g window-status-fg colour5
+setw -g window-status-attr dim 
+setw -g window-status-format '#I#[fg=colour242]:#[fg=colour7]#W#[fg=colour244]#F'
 
 setw -g window-status-bell-attr bold
 setw -g window-status-bell-fg colour255
