Update tmux conf.

--- a/archlinux/.tmux.conf
+++ b/archlinux/.tmux.conf
@@ -26,10 +26,10 @@ bind-key    -T copy-mode-vi r send-keys -X cursor-right
 # design tweaking
 
 # panes
-set -g pane-active-border-fg brightmagenta
-set -g pane-active-border-bg colour236
-set -g pane-border-bg colour235
+set -g pane-active-border-fg colour204
+set -g pane-active-border-bg default
 set -g pane-border-fg colour238
+set -g pane-border-bg default
 
 # status line
 set -g status-justify centre
