--- a/archlinux/.config/i3/config
+++ b/archlinux/.config/i3/config
@@ -205,3 +205,4 @@ exec --no-startup-id xset -dpms
 #exec --no-startup-id pasystray -a &
 exec --no-startup-id dual-monitor
 exec_always --no-startup-id restart-polybar
+exec_always --no-startup-id polychromatic-tray-applet
