--- a/archlinux/.tmux.conf
+++ b/archlinux/.tmux.conf
@@ -22,6 +22,7 @@ bind-key    -T copy-mode-vi c send-keys -X cursor-left
 bind-key    -T copy-mode-vi t send-keys -X cursor-down
 bind-key    -T copy-mode-vi s send-keys -X cursor-up
 bind-key    -T copy-mode-vi r send-keys -X cursor-right
+bind-key    -T prefix g set -g status
 
 # design tweaking
 
