Update my address email in .gitconfig.
I shouldn’t use my VP address as default.

--- a/archlinux/.gitconfig
+++ b/archlinux/.gitconfig
@@ -1,5 +1,5 @@
 [user]
-	email = dsabadie@vente-privee.com
+	email = dimitri.sabadie@gmail.com
 	name = Dimitri Sabadie
 [alias]
 	slog = log --graph --all --pretty=format:\"%C(yellow)%h%Cblue%d %Creset%s %C(green)%cr%Creset (%C(magenta)%an%Creset)\"
