Renamed `git fetch-prune` to `git fp`.

--- a/archlinux/.gitconfig
+++ b/archlinux/.gitconfig
@@ -3,6 +3,6 @@
 	name = Dimitri Sabadie
 [alias]
 	slog = log --graph --all --pretty=format:\"%C(yellow)%h%Cblue%d %Creset%s %C(green)%cr%Creset (%C(magenta)%an%Creset)\"
-  fetch-prune = fetch --all --prune
+  fp = fetch --all --prune
 [core]
 	pager = less -F -X
