Fixed background color for terminal.

--- a/archlinux/.config/alacritty/alacritty.yml
+++ b/archlinux/.config/alacritty/alacritty.yml
@@ -181,7 +181,7 @@ custom_cursor_colors: false
 colors:
   # Default colors
   primary:
-    background: '0x1e2127'
+    background: '0x282c34'
     foreground: '0xabb2bf'
 
   # Normal colors
